# listy

./: .gitignore  README.md  pyproject.toml
listy/: __main__.py  groq_client.py  settings.py  transcribe.py
