[project]
name = "listy"
version = "0.1.0"
description = "Turns voice messages into letters (these long-form text things people barely write anymore)."
authors = [
    { name = "malyvsen", email = "5940672+malyvsen@users.noreply.github.com" },
]
dependencies = [
    "groq>=0.9.0",
    "pydantic-settings>=2.4.0",
    "asyncclick>=8.1.7.2",
    "tqdm>=4.66.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "GPLv3" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
lint = "ruff check ."
typecheck = "pyright ."
check = { composite = ["lint", "typecheck"] }

format = "ruff check --fix ."
fix = { composite = ["format"] }


[tool.pdm.dev-dependencies]
dev = ["ruff>=0.5.7", "pyright>=1.1.375"]
